--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.8.9)
 project (dl_dxf)
-
+include_directories (SYSTEM /home/valentijn/boost_1_65_1)
 add_subdirectory(Novas_C3.1)
 add_subdirectory(Novasextra)
 add_subdirectory(dxf)
