--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.9)
-project (dl_dxf)
+project (sterreschrijver)
 include_directories (SYSTEM /home/valentijn/boost_1_65_1)
 link_directories ( /home/valentijn/boost_1_65_1/stage/lib)
 add_subdirectory(Novas_C3.1)
