--- a/starclass/CMakeLists.txt
+++ b/starclass/CMakeLists.txt
@@ -3,4 +3,4 @@ project (starclass)
 include_directories(../Novas_C3.1 ../Novasextra ../include ../quat ../starclass)
 add_library(starclass STATIC starclass.cpp)
 add_executable(starlist starlist.cpp)
-target_link_libraries(starlist starclass novasextra novas boost_program_options)
+target_link_libraries(starlist starclass novasextra novas)
